--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hi there, I'm Sam!
 description: I'm a student who really likes to make stuff!
-remote_theme: pages-themes/cayman
+remote_theme: pages-themes/architect
 plugins:
 - jekyll-remote-theme
